Creando archivo index.html con lista de cursos

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <meta charset="UTF-8">
-    <title>Cursos de Alura</title>
+    <head>
+        <meta charset="UTF-8">
+        <title>Cursos de Alura</title>
+    </head>
+    <body>
+        <li>Vagrant</li>
+        <li>Docker</li>
+        <li>Ansible</li>
+        <li>Integracion Continua</li>
+    </body>
 </html>
-<body>
-    <li>Vagrant</li>
-    <li>Docker</li>
-    <li>Ansible</li>
-    <li>Integracion Continua</li>
-</body>
