--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
-        <li>Integracion Continua</li>
+        <li>Integración Continua</li>
     </body>
 </html>
