--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <li>Docker</li>
         <li>Ansible</li>
         <li>Integración Continua: Madurez y productividad en el desarrollo de software</li>
+        <li>Kubernetes</li>
     </body>
 </html>
