--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Lista de Cursos de DevOps de Alura</title>
+        <title>Lista de cursos de DevOps de Alura</title>
     </head>
     <body>
         <li>Vagrant</li>
