--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>Lista De cursos de DevOps de Alura</title>
     </head>
     <body>
-        <li>Vagrant</li>
-        <li>Docker</li>
+        <li>Vagrant: Gerenciando maquinas virtuales</li>
+        <li>Docker: Creando containers sin dolor de cabeza</li>
         <li>Ansible</li>
         <li>Integración Continua: Madurez y productividad en el desarrollo de software</li>
     </body>
