--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>Lista de Cursos de DevOps De Alura</title>
     </head>
     <body>
-        <li>Vagrant: Gerenciando maquinas virtuales</li>
-        <li>Curso de Docker: Creando containers sin dolor de cabeza</li>
+        <li>Vagrant</li>
+        <li>Docker: Creando containers sin dolor de cabeza</li>
         <li>Ansible</li>
         <li>Integración Continua: Madurez y productividad en el desarrollo de software</li> 
         <li>Kubernetes</li>
