corrigiendo el error

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <li>Vagrant: Gerenciando maquinas virtuales</li>
         <li>Curso de Docker: Creando containers sin dolor de cabeza</li>
-        <li>Ansible</li>
+        <li>Aansible</li>
         <li>Integración Continua: Madurez y productividad en el desarrollo de software</li> 
         <li>Kubernetes</li>
     </body>
