--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <li>Vagrant: Gerenciando maquinas virtuales</li>
-        <li>Curso de Docker: Creando containers sin dolor de cabeza</li>
+        <li>Cursoo de Docker: Creando containers sin dolor de cabeza</li>
         <li>Aansible</li>
         <li>Integración Continua: Madurez y productividad en el desarrollo de software</li> 
         <li>Kubernetes</li>
